<resources>
    <string name="app_name">Prominiti</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_underline"><u>Sign Up</u></string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="favorite_users"><u>Favorite Users</u></string>
</resources>