<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background3"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:id="@+id/signup_logo"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_text"
        android:text="Sign Up"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/primetime"
        android:layout_below="@id/signup_logo"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxBackgroundMode="filled"
        android:hint= "@string/name"
        app:hintTextColor="@color/black"
        android:layout_below="@+id/signup_text"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
        android:id="@+id/signup_name"
        app:boxBackgroundColor="@color/Pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/name_editText"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxBackgroundMode="filled"
        android:hint= "@string/username"
        app:hintTextColor="@color/black"
        android:layout_below="@+id/signup_name"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:startIconDrawable="@drawable/ic_baseline_person_pin_24"
        android:id="@+id/signup_username"
        app:boxBackgroundColor="@color/Pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/username_editText"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxBackgroundMode="filled"
        android:hint= "@string/email"
        app:hintTextColor="@color/black"
        android:layout_below="@+id/signup_username"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:startIconDrawable="@drawable/ic_outline_email_24"
        android:id="@+id/signup_email"
        app:boxBackgroundColor="@color/Pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/email_editText"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxBackgroundMode="filled"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        android:hint="@string/password"
        android:layout_below="@id/signup_email"
        android:id="@+id/signup_password"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxBackgroundColor="@color/Pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_signup_editText"
            android:textColor="@color/black"
            android:maxLines="1"
            android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxBackgroundMode="filled"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        android:hint="Confirm Password"
        android:layout_below="@id/signup_password"
        android:id="@+id/confirm_password"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxBackgroundColor="@color/Pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/confirmPassword_editText"
            android:textColor="@color/black"
            android:maxLines="1"
            android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Register"
        app:icon="@drawable/ic_baseline_done_outline_24"
        app:iconGravity="textEnd"
        app:cornerRadius="20dp"
        android:background="@drawable/gradient"
        app:backgroundTint="@null"/>


</RelativeLayout>